--- a/README
+++ b/README
@@ -62,3 +62,5 @@ are truly rewarding to work through.
   + book: https://a.co/d/7u1stj5
 - calc: OpenStax Calculus
   + book: https://openstax.org/details/books/calculus-volume-1
+- aic: Algorithms in C
+  + book: https://a.co/d/28jz8xy
