calc1/ch6: Add 6.2

--- a/OpenStax Calculus/Volume 1/ch6.tex
+++ b/OpenStax Calculus/Volume 1/ch6.tex
@@ -20,4 +20,6 @@
     Let $f(x)$ and $g(x)$ be continuous functions over an interval $\left[a, b\right]$.
 \end{theorem*}
 
+\section*{6.2 | Determining Volumes by Slicing}
+
 \end{document}
