--- a/Algorithms in C/tex/ch1.tex
+++ b/Algorithms in C/tex/ch1.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath, amsthm, booktabs, enumitem, listings}
+\usepackage{forest}
 
 \everymath{\displaystyle}
 \newtheorem{property}{Property}
@@ -206,6 +207,37 @@ finding that quick find always (and quick union sometimes) uses \emph{at least} 
             supposing half of the while loops require iterating over $N$ objects, the total time
             required is 5.8 days.
       \item 100.001 seconds.
-      \item
+      \item $\frac{1}{2} \times n$.
+      \item \begin{forest}
+                  for tree={draw}
+                  [0[1[2][3[4][5[6][7]]]]]
+            \end{forest}
+      \item\label{ex:14} 0-1, 2-3, 4-5, 6-7, 8-9, 10-11, 12-13, 14-15,
+
+            0-2, 4-6, 8-10, 12-14,
+
+            0-4, 8-12,
+
+            0-8.
+      \item Same answer as \ref{ex:14}.
+      \item See \texttt{src/ch1}.
+      \item {\ttfamily
+            \begin{tabular}{cc|cccccccc|c}
+                  \toprule
+                  p & q & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & n \\
+                  \midrule
+                  0 & 2 & 0 & 1 & 0 & 3 & 4 & 5 & 6 & 7 & 5 \\
+                  1 & 4 & 0 & 1 & 0 & 3 & 1 & 5 & 6 & 7 & 5 \\
+                  2 & 5 & 0 & 1 & 0 & 3 & 1 & 0 & 6 & 7 & 7 \\
+                  3 & 6 & 0 & 1 & 0 & 3 & 1 & 0 & 3 & 7 & 5 \\
+                  0 & 4 & 0 & 0 & 0 & 3 & 0 & 0 & 3 & 7 & 9 \\
+                  6 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 7 & 9 \\
+                  1 & 3 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 7 & 2 \\
+                  \bottomrule
+            \end{tabular}
+            }
+      \item Same answer as \ref{ex:14}. Maybe I'm understanding the prompt incorrectly.
+      \item Based on my implementation, if the input values only contain roots, then full path
+            compression has no effect.
 \end{enumerate}
 \end{document}
