aic/ch1: Exercise 1.20

--- a/Algorithms in C/tex/ch1.tex
+++ b/Algorithms in C/tex/ch1.tex
@@ -220,7 +220,7 @@ finding that quick find always (and quick union sometimes) uses \emph{at least} 
 
             0-8.
       \item Same answer as \ref{ex:14}.
-      \item See \texttt{src/ch1}.
+      \item \texttt{src/ch1/ex1\_16.c}.
       \item {\ttfamily
             \begin{tabular}{cc|cccccccc|c}
                   \toprule
@@ -239,5 +239,6 @@ finding that quick find always (and quick union sometimes) uses \emph{at least} 
       \item Same answer as \ref{ex:14}. Maybe I'm understanding the prompt incorrectly.
       \item Based on my implementation, if the input values only contain roots, then full path
             compression has no effect.
+      \item \texttt{src/ch1/ex1\_20.c}.
 \end{enumerate}
 \end{document}
