calc1/ch6: Add 6.3

--- a/OpenStax Calculus/Volume 1/ch6.tex
+++ b/OpenStax Calculus/Volume 1/ch6.tex
@@ -19,7 +19,7 @@
 \begin{theorem*}[Finding the Area of a Region between Curves That Cross]
     Let $f(x)$ and $g(x)$ be continuous functions over an interval $\left[a, b\right]$.
 \end{theorem*}
-
 \section*{6.2 | Determining Volumes by Slicing}
+\section*{6.3 | Volumes of Revolution: Cylindrical Shells}
 
 \end{document}
