--- a/OpenStax Calculus/Volume 1/ch6.tex
+++ b/OpenStax Calculus/Volume 1/ch6.tex
@@ -21,5 +21,12 @@
 \end{theorem*}
 \section*{6.2 | Determining Volumes by Slicing}
 \section*{6.3 | Volumes of Revolution: Cylindrical Shells}
+\section*{6.4 | Arc Length of a Curve and Surface Area}
+\begin{theorem*}[Arc Length for $y=f(x)$]
+    Let $f(x)$ be a smooth function over the interval $\left[a, b\right]$. Then the arc length of
+    the portion of the graph of $f(x)$ from the point $(a, f(a))$ to the point $(b, f(b))$ is given
+    by
+    \[\text{Arc Length} = \int_{a}^{b}\sqrt{1+\left[f'(x)\right]^2}dx.\]
+\end{theorem*}
 
 \end{document}
