par/asst1: Complete clampedExpVector

--- a/README
+++ b/README
@@ -64,3 +64,5 @@ are truly rewarding to work through.
   + book: https://openstax.org/details/books/calculus-volume-1
 - aic: Algorithms in C
   + book: https://a.co/d/28jz8xy
+- par: Parallel Computer Architecture and Programming
+  + course: https://www.cs.cmu.edu/afs/cs/academic/class/15418-s18/www/index.html
