--- a/README
+++ b/README
@@ -66,3 +66,5 @@ are truly rewarding to work through.
   + book: https://a.co/d/28jz8xy
 - par: Parallel Computer Architecture and Programming
   + course: https://www.cs.cmu.edu/afs/cs/academic/class/15418-s18/www/index.html
+- jcalc: James Stewart Calculus
+  + book: 9781285740621
