tlam/ch11: Complete 11.12 (iv)

--- a/How to Think Like a Mathematician/ch11.tex
+++ b/How to Think Like a Mathematician/ch11.tex
@@ -22,6 +22,19 @@
                         \item All cats are grey.
                         \item There exists a cats such that an owner doesn't exist.
                         \item There exists an owner for whom there doesn't exist a grey cat.
+                        \item There exists a fire engine that is not read or an ambulance that is
+                              not white.
+                    \end{enumerate}
+              \item \begin{enumerate}[label=(\alph*)]
+                        \item All of the students in the class are here today.
+                        \item There does not exist an $x$ such that $P(x)$ is true or there exists
+                              an $y$ such that $P(y)$ is true and $y \ne x$.
+                        \item Some mathematics students are not hardworking.
+                        \item All of the students in the class are not here today.
+                        \item There are some integers $x$ such that $\sqrt{x}$ is not
+                              rational.
+                    \end{enumerate}
+              \item \begin{enumerate}[label=(\alph*)]
                         \item
                     \end{enumerate}
           \end{enumerate}
